# amneziawg-install

./: .gitattributes  README.md  amneziawg-install.sh  amneziawg-proxy-install.sh  amneziawg-proxy-uninstall.sh  amneziawg-proxy.sh  amneziawg-uninstall.sh  amneziawg-web-install.sh  amneziawg-web-uninstall.sh  amneziawg-web-upgrade.sh  amneziawg-web.sh
.github/versioning/: components.json
.github/workflows/: component-versions.yml  lint.yml  test.yml
amneziawg-proxy/: .gitignore  ARCHITECTURE.md  Cargo.toml
amneziawg-proxy/doc/: ARCHITECTURE.md  MANUAL_DEPLOYMENT.md  PERFORMANCE.md  README.md  USAGE.md
amneziawg-proxy/examples/: bench.rs
amneziawg-proxy/packaging/: amneziawg-proxy.service
amneziawg-proxy/scripts/: amneziawg-proxy-common.sh  amneziawg-proxy-install.sh  amneziawg-proxy-uninstall.sh  amneziawg-proxy-upgrade.sh
amneziawg-proxy/src/: backend.rs  config.rs  errors.rs  lib.rs  main.rs  metrics.rs  proxy.rs  quic_handshake.rs  responder.rs  session.rs  transform.rs
amneziawg-proxy/tests/: integration_test.rs
amneziawg-web/: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md
amneziawg-web/.github/workflows/: ci.yml
amneziawg-web/docs/: ARCHITECTURE.md  COPILOT_TASK.md  DEPLOYMENT.md  INSTALL.md  MVP.md  PRODUCT_SPEC.md  RELEASE.md  ROADMAP.md
amneziawg-web/migrations/: 0001_initial.sql  0002_add_config_metadata.sql  0003_add_events_peer_id.sql  0004_add_friendly_name.sql  0005_add_snapshot_composite_index.sql
amneziawg-web/packaging/: amneziawg-web.service
amneziawg-web/scripts/: amneziawg-web-install.sh  amneziawg-web-uninstall.sh  amneziawg-web-upgrade.sh
amneziawg-web/src/: main.rs  system_versions.rs
amneziawg-web/src/admin/: client_manager.rs  mod.rs  script_bridge.rs
amneziawg-web/src/auth/: mod.rs
amneziawg-web/src/awg/: mod.rs
amneziawg-web/src/config_store/: mod.rs
amneziawg-web/src/db/: events.rs  mod.rs  peers.rs
amneziawg-web/src/domain/: history.rs  mod.rs
amneziawg-web/src/poller/: mod.rs
amneziawg-web/src/web/: mod.rs
docs/: VERSIONING.md
scripts/versioning/: component_versions.py
tests/: test-functions.sh  test-install-mock.sh  test-proxy-scripts.sh
