[package]
name = "amneziawg-web"
version = "0.1.0"
edition = "2021"
description = "Self-hosted web panel for AmneziaWG (AWG) visibility and management"
license = "MIT"
repository = "https://github.com/wiresock/amneziawg-install"
homepage = "https://github.com/wiresock/amneziawg-install"
keywords = ["wireguard", "amneziawg", "vpn", "web-ui"]
categories = ["network-programming", "web-programming"]
rust-version = "1.75"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio", "migrate", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive", "env"] }
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
argon2 = "0.5"
rand = "0.8"
libc = "0.2.183"

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
tempfile = "3"
